chore: 🤖 Move public folder to doc site

--- a/docs/guide/features/a11y.md
+++ b/docs/guide/features/a11y.md
@@ -31,14 +31,14 @@ a11y();
 
 ## Tab Stops
 
-![Screenshot of speccer a11y tab stops in use](https://raw.githubusercontent.com/phun-ky/speccer/refs/heads/main/public/speccer-a11y-tabstops-light.png)
+![Screenshot of speccer a11y tab stops in use](/speccer-a11y-tabstops-light.png)
 
 If you want to display tab stops, append `data-speccer="a11y tabstops"` as an
 attribute to the container you want to display the tab stops in.
 
 ## Landmarks And Regions
 
-![Screenshot of speccer a11y landmarks in use](https://raw.githubusercontent.com/phun-ky/speccer/refs/heads/main/public/speccer-a11y-landmarks-light.png)
+![Screenshot of speccer a11y landmarks in use](/speccer-a11y-landmarks-light.png)
 
 If you want to display landmarks and regions, append
 `data-speccer="a11y landmark"` as an attribute to the container you want to
@@ -46,21 +46,21 @@ display the landmarks and regions in.
 
 ## Headings
 
-![Screenshot of speccer a11y headings in use](https://raw.githubusercontent.com/phun-ky/speccer/refs/heads/main/public/speccer-a11y-headings-light.png)
+![Screenshot of speccer a11y headings in use](/speccer-a11y-headings-light.png)
 
 If you want to display headings, append `data-speccer="a11y headings"` as an
 attribute to the container you want to display the headings in.
 
 ## Autocomplete
 
-![Screenshot of speccer a11y autocomplete in use](https://raw.githubusercontent.com/phun-ky/speccer/refs/heads/main/public/speccer-a11y-autocomplete-light.png)
+![Screenshot of speccer a11y autocomplete in use](/speccer-a11y-autocomplete-light.png)
 
 If you want to display autocomplete, append `data-speccer="a11y autocomplete"`
 as an attribute to the container you want to display the autocomplete in.
 
 ## Keys And Shortcut
 
-![Screenshot of speccer a11y shortcuts in use](https://raw.githubusercontent.com/phun-ky/speccer/refs/heads/main/public/speccer-a11y-shortcuts-light.png)
+![Screenshot of speccer a11y shortcuts in use](/speccer-a11y-shortcuts-light.png)
 
 If you want to display the shortcut with keys used for elements, use
 `data-speccer="a11y shortcut"` and `data-speccer-a11y-shortcut="<shortcut>"` on
