--- a/docs/api/functions/a11y.md
+++ b/docs/api/functions/a11y.md
@@ -15,7 +15,7 @@ This feature will annotate or highlight accessibility areas like landmarks and
 region. It can also display tab stops/sequence and any keyboard shortcuts
 assigned
 
-![pin](https://github.com/phun-ky/speccer/blob/main/public/speccer-a11y-tabstops-light.png?raw=true)
+![pin](/speccer-a11y-tabstops-light.png?raw=true)
 
 ## Returns
 
