docs: ✏️ Amend documentation

--- a/docs/guide/features/a11y.md
+++ b/docs/guide/features/a11y.md
@@ -8,6 +8,8 @@ or
 Prior art: [Jeremy Elder](https://twitter.com/JeremyElder) and
 [Stephanie Hagadorn](https://shagadorn.work/)
 
+[[toc]]
+
 ::: info
 
 For more technical documentation, see the relevant documentation
@@ -15,14 +17,29 @@ For more technical documentation, see the relevant documentation
 
 :::
 
-::: info
+## Usage
 
-For now, we only expose the `a11y` function to initialize this feature. If you
-want to use this feature programmatically, append the required attributes and
-then:
+### Via `<script>`-tag
 
-```typescript
-import { a11y } from 'https://esm.sh/@phun-ky/speccer';
+```html [index.html]
+<script src="https://unpkg.com/@phun-ky/speccer/dist/speccer.js"></script>
+<div data-speccer="a11y tabstops|landmark|headings|autocomplete|shortcut">
+  …
+</div>
+```
+
+### Programmatically
+
+::: code-group
+
+```html [index.html]
+<div data-speccer="a11y tabstops|landmark|headings|autocomplete|shortcut">
+  …
+</div>
+```
+
+```typescript [main.ts]
+import { a11y } from '@phun-ky/speccer';
 
 a11y();
 ```
